# MScThesis

./: .gitignore  CHANGELOG.md  README.md  ga.cabal  pso.cabal
GA/charm++/sequential/: CMakeLists.txt  Makefile
GA/charm++/sequential/app/: main.cpp
GA/charm++/sequential/include/: ga.hpp  mutationHeuristic.hpp  read.hpp
GA/charm++/sequential/src/: benchmark.cpp  crossoverHeuristic.cpp  ga.cpp  mutationHeuristic.cpp  read.cpp  selectionHeuristic.cpp
kmeans/: .gitignore  CMakeLists.txt
kmeans/app/: main.cpp
kmeans/charm/: Makefile  main.def.h
kmeans/charm++/parallel/: Makefile  benchmark.sh  benchmark2.sh  kmeans  main.decl.h  main.def.h
kmeans/charm++/parallel/app/: main.cpp
kmeans/charm++/parallel/ci/: distanceMetrics.ci  main.ci
kmeans/charm++/parallel/include/: distanceMetrics.h  main.h  read.h
kmeans/charm++/parallel/src/: distanceMetrics.cpp  kmeans.cpp  read.cpp
kmeans/charm++/sequential/: CMakeLists.txt  Doxyfile  Makefile  kmeans  letter.txt  test
kmeans/charm++/sequential/app/: main.cpp
kmeans/charm++/sequential/docs/html/: annotated.html  annotated_dup.js  classDM_1_1DistanceMetrics-members.html  classDM_1_1DistanceMetrics.html  classDM_1_1DistanceMetrics.js  classKmeansParser_1_1Reader.html  (+41 more)
kmeans/charm++/sequential/include/: distanceMetrics.hpp  kmeans.hpp  read.hpp
kmeans/charm++/sequential/src/: distanceMetrics.cpp  kmeans.cpp  read.cpp
kmeans/charm++/sequential/tests/: test.cpp  testDistanceMetrics.cpp  testKmeans.cpp
kmeans/charm/app/: main.cpp
kmeans/charm/ci/: distanceMetrics.ci  kmeans.ci  main.ci
kmeans/charm/include/: distanceMetrics.decl.h  distanceMetrics.def.h  distanceMetrics.h  kmeans.h  main.decl.h  main.h
kmeans/charm/src/: distanceMetrics.cpp  kmeans.cpp
kmeans/haskell/parallel/: benchmark.sh  benchmark2.sh  k-means.cabal
kmeans/haskell/parallel-vector/app/: Main.hs
kmeans/haskell/parallel-vector/src/: Read.hs
kmeans/haskell/parallel/app/: Main.hs
kmeans/haskell/parallel/src/: IgnoreVecKM.hs  KmeansUn.hs  Read.hs
kmeans/haskell/seq-vector/ docs/: Kmeans.html  Main.html  Read.html  index.html
kmeans/haskell/seq-vector/app/: Main.hs
kmeans/haskell/sequential/: CHANGELOG.md  k-means.cabal
kmeans/haskell/sequential/ docs/: DistanceMetrics.html  doc-index.html
kmeans/haskell/sequential/app/: Main.hs
kmeans/haskell/sequential/src/: DistanceMetrics.hs  DistanceMetricsV.hs  Kmeans.hs  Read.hs
kmeans/haskell/sequential/tests/: TestDistanceMetrics.hs  TestKmean.hs  TestKmeans.hs
kmeans/include/: read.hpp
kmeans/sequential/app/: main.cpp
kmeans/sequential/include/: kmeans.hpp
kmeans/sequential/src/: kmeans.cpp
kmeans/src/: read.cpp
(+176 files in other folders)
